binrw/tests/ui/named_args_unsupported_type_union.rs
use binrw::NamedArgs;

#[derive(NamedArgs)]
union Foo {
    a: i32,
}

fn main() {}
